--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto = update
-server.port = 8083
-
+spring.jpa.properties.hibernate.check_nullability=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.validator.apply_to_ddl=false
+server.port = 8081
